--- a/src/app/_components/flights-components/flight-multi-city/flight-multi-city.component.html
+++ b/src/app/_components/flights-components/flight-multi-city/flight-multi-city.component.html
@@ -1,116 +1,145 @@
-
 <div class="row">
+
   <div class="col-md-10">
+
+    <!-- flight 1 -->
     <div class="row">
       <div class="form-group  col-md-3 padding-rl5">
-        <input type="text" class="form-control" id="exampleInputName2" placeholder="From">
-        <span class="from form-control-feedback " aria-hidden="true"> </span>
+        <input [(ngModel)]="flightService.multiCitiesModel.Origin1" name="Origin1" #Origin1 [typeahead]="citiesFrom1"
+          typeaheadOptionField="Name" class="form-control" placeholder="{{ 'FlightMultiCity.From' | translate }}"
+          [typeaheadOptionsLimit]="7" [typeaheadMinLength]="0" (keyup)="updateCitiesFrom1($event)" (typeaheadOnSelect)="selectCity1($event,'from')">
       </div>
       <div class="form-group  col-md-3 padding-rl5">
-        <input type="email" class="form-control" id="exampleInputEmail2" placeholder="To">
+        <input [(ngModel)]="flightService.multiCitiesModel.Destination1" name="Destination1" #Destination1 [typeahead]="citiesTo1"
+          typeaheadOptionField="Name" class="form-control" placeholder="{{ 'FlightMultiCity.To' | translate }}"
+          [typeaheadOptionsLimit]="7" [typeaheadMinLength]="0" (keyup)="updateCitiesTo1($event)" (typeaheadOnSelect)="selectCity1($event,'To')">
       </div>
       <div class="form-group  col-md-3 padding-rl5">
-        <input type="text" placeholder="Departing / Arrival Time" class="form-control" bsDaterangepicker>
+        <input type="text" [(ngModel)]="flightService.multiCitiesModel.Date1" name="Date1" #Date1 placeholder="{{ 'FlightMultiCity.DepartingTime' | translate }}"
+          class="form-control" bsDatepicker>
       </div>
       <div class="form-group  col-md-3 padding-rl5">
-        <input type="email" class="form-control" id="exampleInputEmail2" placeholder="1 Adult / Economy" placement="bottom"
-          [popover]="popTemplate" popoverTitle="Dynamic html inside">
+        <input class="form-control" placeholder="{{ 'FlightMultiCity.AdultEconomy' | translate }}" placement="bottom"
+          [popover]="popTemplate">
         <ng-template #popTemplate>
           <div class="form-group">
-            <label for="exampleInputEmail1">Adult</label>
-            <input type="number" class="form-control plus" id="exampleInputEmail1" placeholder="0">
+            <label>{{ 'FlightMultiCity.Adult' | translate }}</label>
+            <input type="number" class="form-control plus" name="Adult" [(ngModel)]="flightService.multiCitiesModel.Adult"
+              #Adult placeholder="0">
           </div>
           <div class="form-group">
-            <label for="exampleInputEmail1">Children</label>
-            <input type="number" class="form-control plus" id="exampleInputEmail1" placeholder="0">
+            <label> {{ 'FlightMultiCity.Children' | translate }}</label>
+            <input type="number" class="form-control plus" name="Child" [(ngModel)]="flightService.multiCitiesModel.Child"
+              #Child placeholder="0">
           </div>
         </ng-template>
-  
       </div>
-      
     </div>
+
+    <!-- flight 2 -->
     <div class="row">
       <div class="form-group  col-md-3 padding-rl5">
-        <input type="text" class="form-control" id="exampleInputName2" placeholder="From">
-        <span class="from form-control-feedback " aria-hidden="true"> </span>
+        <input [(ngModel)]="flightService.multiCitiesModel.Origin2" name="Origin2" #Origin2 [typeahead]="citiesFrom2"
+          typeaheadOptionField="Name" class="form-control" placeholder="{{ 'FlightMultiCity.From' | translate }}"
+          [typeaheadOptionsLimit]="7" [typeaheadMinLength]="0" (keyup)="updateCitiesFrom2($event)" (typeaheadOnSelect)="selectCity2($event,'from')">
       </div>
       <div class="form-group  col-md-3 padding-rl5">
-        <input type="email" class="form-control" id="exampleInputEmail2" placeholder="To">
+        <input [(ngModel)]="flightService.multiCitiesModel.Destination2" name="Destination2" #Destination2 [typeahead]="citiesTo2"
+          typeaheadOptionField="Name" class="form-control" placeholder="{{ 'FlightMultiCity.To' | translate }}"
+          [typeaheadOptionsLimit]="7" [typeaheadMinLength]="0" (keyup)="updateCitiesTo2($event)" (typeaheadOnSelect)="selectCity2($event,'to')">
       </div>
       <div class="form-group  col-md-3 padding-rl5">
-        <input type="text" placeholder="Departing / Arrival Time" class="form-control" bsDaterangepicker>
+        <input type="text" [(ngModel)]="flightService.multiCitiesModel.Date2" name="Date2" #Date2 placeholder="{{ 'FlightMultiCity.DepartingTime' | translate }}"
+          class="form-control" bsDatepicker>
       </div>
-  
-  
+
     </div>
-    <div class="row">
+
+    <!-- flight 3 -->
+    <div *ngIf="flightService.multiCityFlightsNumber > 2" class="row">
       <div class="form-group  col-md-3 padding-rl5">
-        <input type="text" class="form-control" id="exampleInputName2" placeholder="From">
-        <span class="from form-control-feedback " aria-hidden="true"> </span>
+        <input [(ngModel)]="flightService.multiCitiesModel.Origin3" name="Origin3" #Origin3 [typeahead]="citiesFrom3"
+          typeaheadOptionField="Name" class="form-control" placeholder="{{ 'FlightMultiCity.From' | translate }}"
+          [typeaheadOptionsLimit]="7" [typeaheadMinLength]="0" (keyup)="updateCitiesFrom3($event)" (typeaheadOnSelect)="selectCity3($event,'from')">
       </div>
       <div class="form-group  col-md-3 padding-rl5">
-        <input type="email" class="form-control" id="exampleInputEmail2" placeholder="To">
+        <input [(ngModel)]="flightService.multiCitiesModel.Destination3" name="Destination3" #Destination3 [typeahead]="citiesTo3"
+          typeaheadOptionField="Name" class="form-control" placeholder="{{ 'FlightMultiCity.To' | translate }}"
+          [typeaheadOptionsLimit]="7" [typeaheadMinLength]="0" (keyup)="updateCitiesTo3($event)" (typeaheadOnSelect)="selectCity3($event,'to')">
       </div>
       <div class="form-group  col-md-3 padding-rl5">
-        <input type="text" placeholder="Departing / Arrival Time" class="form-control" bsDaterangepicker>
+        <input type="text" [(ngModel)]="flightService.multiCitiesModel.Date3" name="Date3" #Date3 placeholder="{{ 'FlightMultiCity.DepartingTime' | translate }}"
+          class="form-control" bsDatepicker>
       </div>
-      <div class="form-group  col-md-3 padding-rl5">
-        <a class="white"><span class="glyphicon glyphicon-remove" aria-hidden="true" style="margin-top: 7px;"></span></a>
+      <div *ngIf="flightService.multiCityFlightsNumber == 3" class="form-group  col-md-3 padding-rl5">
+        <a (click)="deleteFlight()" class="white"><span class="glyphicon glyphicon-remove" aria-hidden="true" style="margin-top: 7px;"></span></a>
       </div>
-  
+
     </div>
-    <div class="row">
+
+    <!-- flight 4 -->
+    <div *ngIf="flightService.multiCityFlightsNumber > 3" class="row">
       <div class="form-group  col-md-3 padding-rl5">
-        <input type="text" class="form-control" id="exampleInputName2" placeholder="From">
-        <span class="from form-control-feedback " aria-hidden="true"> </span>
+        <input [(ngModel)]="flightService.multiCitiesModel.Origin4" name="Origin4" #Origin4 [typeahead]="citiesFrom4"
+          typeaheadOptionField="Name" class="form-control" placeholder="{{ 'FlightMultiCity.From' | translate }}"
+          [typeaheadOptionsLimit]="7" [typeaheadMinLength]="0" (keyup)="updateCitiesFrom4($event)" (typeaheadOnSelect)="selectCity4($event,'from')">
       </div>
       <div class="form-group  col-md-3 padding-rl5">
-        <input type="email" class="form-control" id="exampleInputEmail2" placeholder="To">
+        <input [(ngModel)]="flightService.multiCitiesModel.Destination4" name="Destination4" #Destination4 [typeahead]="citiesTo4"
+          typeaheadOptionField="Name" class="form-control" placeholder="{{ 'FlightMultiCity.To' | translate }}"
+          [typeaheadOptionsLimit]="7" [typeaheadMinLength]="0" (keyup)="updateCitiesTo4($event)" (typeaheadOnSelect)="selectCity4($event,'to')">
       </div>
       <div class="form-group  col-md-3 padding-rl5">
-        <input type="text" placeholder="Departing / Arrival Time" class="form-control" bsDaterangepicker>
+        <input type="text" [(ngModel)]="flightService.multiCitiesModel.Date4" name="Date4" #Date4 placeholder="{{ 'FlightMultiCity.DepartingTime' | translate }}"
+          class="form-control" bsDatepicker>
       </div>
-      <div class="form-group  col-md-3 padding-rl5">
-        <a class="white"><span class="glyphicon glyphicon-remove" aria-hidden="true" style="margin-top: 7px;"></span></a>
+      <div *ngIf="flightService.multiCityFlightsNumber == 4" class="form-group  col-md-3 padding-rl5">
+        <a (click)="deleteFlight()" class="white"><span class="glyphicon glyphicon-remove" aria-hidden="true" style="margin-top: 7px;"></span></a>
       </div>
-  
+
     </div>
-    <div class="row">
+
+    <!-- flight 5 -->
+    <div *ngIf="flightService.multiCityFlightsNumber > 4" class="row" >
       <div class="form-group  col-md-3 padding-rl5">
-        <input type="text" class="form-control" id="exampleInputName2" placeholder="From">
-        <span class="from form-control-feedback " aria-hidden="true"> </span>
+        <input [(ngModel)]="flightService.multiCitiesModel.Origin5" name="Origin5" #Origin5 [typeahead]="citiesFrom5"
+          typeaheadOptionField="Name" class="form-control" placeholder="{{ 'FlightMultiCity.From' | translate }}"
+          [typeaheadOptionsLimit]="7" [typeaheadMinLength]="0" (keyup)="updateCitiesFrom5($event)" (typeaheadOnSelect)="selectCity5($event,'from')">
       </div>
       <div class="form-group  col-md-3 padding-rl5">
-        <input type="email" class="form-control" id="exampleInputEmail2" placeholder="To">
+        <input [(ngModel)]="flightService.multiCitiesModel.Destination5" name="Destination5" #Destination5 [typeahead]="citiesTo5"
+          typeaheadOptionField="Name" class="form-control" placeholder="{{ 'FlightMultiCity.To' | translate }}"
+          [typeaheadOptionsLimit]="7" [typeaheadMinLength]="0" (keyup)="updateCitiesTo5($event)" (typeaheadOnSelect)="selectCity5($event,'to')">
       </div>
       <div class="form-group  col-md-3 padding-rl5">
-        <input type="text" placeholder="Departing / Arrival Time" class="form-control" bsDaterangepicker>
+        <input type="text" [(ngModel)]="flightService.multiCitiesModel.Date5" name="Date5" #Date5 placeholder="{{ 'FlightMultiCity.DepartingTime' | translate }}"
+          class="form-control" bsDatepicker>
       </div>
       <div class="form-group  col-md-3 padding-rl5">
-        <a class="white"><span class="glyphicon glyphicon-remove" aria-hidden="true" style="margin-top: 7px;"></span></a>
+        <a (click)="deleteFlight()" class="white"><span class="glyphicon glyphicon-remove" aria-hidden="true" style="margin-top: 7px;"></span></a>
       </div>
-  
+
     </div>
+
   </div>
   <div class="col-md-2 ">
-    <button type="submit" class="btn btn-orange" style="width:100%;">Search</button>
+    <button type="submit" (click)="search()" class="btn btn-orange" style="width:100%;">Search</button>
   </div>
 </div>
-  <div class="row">
+<div class="row">
 
-    <div class="form-group  col-md-2 padding-rl5">
-      <button type="submit" class="btn btn-blue" style="width:100%;">Add flight <span class="glyphicon glyphicon-plus"
-          aria-hidden="true"></span> </button>
-    </div>
+  <div *ngIf="flightService.multiCityFlightsNumber < 5" class="form-group  col-md-2 padding-rl5">
+    <button (click)="addFlight()" class="btn btn-blue" style="width:100%;">  {{ 'FlightMultiCity.AddFlight' | translate }} <span class="glyphicon glyphicon-plus"
+        aria-hidden="true"></span> </button>
   </div>
+</div>
 
 
+<div class="row" style="padding:15px;">
+  <label class="check">
+    {{ 'FlightMultiCity.NoneStopFlight' | translate }}
+    <input type="checkbox" name="DirectFlight" #DirectFlight [(ngModel)]="flightService.multiCitiesModel.DirectFlight">
+    <span class="checkmark"></span>
+  </label>
 
-  <div class="row" style="padding:15px;">
-    <label class="check">
-      None stop flight
-      <input type="checkbox" checked="checked">
-      <span class="checkmark"></span>
-    </label>
-
-  </div>
+</div>
