mazhar - header-web / home slider

--- a/src/app/_components/header-compenents/header-mobile/header-mobile.component.html
+++ b/src/app/_components/header-compenents/header-mobile/header-mobile.component.html
@@ -13,7 +13,7 @@
     </div>
     <div class="col-md-12" style="margin-top:50px;">
 
-      <div id="collapseBasic" [collapse]="!isCollapsed" class="card card-block card-header">
+      <div id="collapseBasic" [collapse]="isCollapsed" class="card card-block card-header mobile-menu-container">
         <ul class="mobile-menu">
           <li>
             <div class="btn-group " dropdown>
