--- a/src/app/_components/home-components/home/home.component.html
+++ b/src/app/_components/home-components/home/home.component.html
@@ -1,7 +1,21 @@
-<div class="home-img">
-    <video autoplay muted loop id="myVideo" class="bg-video">
-        <source src="../assets/videos/sun.mp4" type="video/mp4" style="width:100%;">
-    </video>
+
+
+<div class="row home-slider" style="z-index:-1;">
+    <carousel>
+    <slide>
+      <img src="../assets/img/wall.png" alt="first slide" >
+    </slide>
+    <slide>
+            <img src="../assets/img/wall2.png" alt="first slide" >
+        </slide>
+    <slide>
+            <img src="../assets/img/wall3.png" alt="first slide" >
+        </slide>
+  </carousel>
+</div>
+
+<div class="home-main-container">
+   
     <app-header></app-header>
     <div class="container">
         <div class="row">
