--- a/src/app/_components/flights-components/flight-multi-city/flight-multi-city.component.html
+++ b/src/app/_components/flights-components/flight-multi-city/flight-multi-city.component.html
@@ -122,16 +122,18 @@
     </div>
 
   </div>
-  <div class="col-md-2 ">
+  <div class="col-md-2 " style="padding: 0 20px;">
     <button type="submit" (click)="search()" class="btn btn-orange" style="width:100%;">Search</button>
   </div>
 </div>
 <div class="row">
 
+ <div class="col-md-12">
   <div *ngIf="flightService.multiCityFlightsNumber < 5" class="form-group  col-md-2 padding-rl5">
-    <button (click)="addFlight()" class="btn btn-blue" style="width:100%;">  {{ 'FlightMultiCity.AddFlight' | translate }} <span class="glyphicon glyphicon-plus"
+    <button (click)="addFlight()" class="btn btn-red" style="width:100%;margin-top: 15px;">  {{ 'FlightMultiCity.AddFlight' | translate }} <span class="glyphicon glyphicon-plus"
         aria-hidden="true"></span> </button>
   </div>
+ </div>
 </div>
 
 
