--- a/src/app/_components/hotels-components/hotels-result/hotels-result.component.html
+++ b/src/app/_components/hotels-components/hotels-result/hotels-result.component.html
@@ -90,7 +90,8 @@
 
 
       <div class="row">
-        <pagination [totalItems]="totalItems" [(ngModel)]="currentPage" class="fr"></pagination>
+        <!-- <pagination [totalItems]="totalItems" [(ngModel)]="currentPage" class="fr"></pagination> -->
+        <pagination  class="fr"></pagination>
       </div>
     </div>
     <div class="col-md-2 hidden-sm hidden-xs">
