--- a/src/app/_components/flights-components/flight-details/flight-details.component.html
+++ b/src/app/_components/flights-components/flight-details/flight-details.component.html
@@ -17,42 +17,117 @@
                 <div class="result-container">
                     <div class="flite-container">
                         <div class="col-md-12  padding-0  ">
-                            <!-- <div *ngFor="let item of flightService.flightDetails.itineraryField"> -->
-
-                                <div class="row padding-0 ">
-                                    <div class="row margin-0">
-                                        <div class="diagonal">
-                                            <h4 style="margin: 3px;"><img src="../assets/img/fly from  copy.png">
-                                                Departure</h4>
+                            <div *ngFor="let Route of this.flightservice.selectedItenartyData[0].Routes; let i = index">
+                                <div *ngIf="this.flightservice.flightType=='multiCity';else   OneWayAndRoundTrip">
+                                  <div class="row padding-0 ">
+                                    <div class="row margin-0  overflow" style="margin-bottom: -5px;">
+                                      <div *ngIf="i=='0';else retunTemplate">
+                                        <div class="diagonal2">
+                                          <h4 style="margin: 3px;"><img src="../assets/img/To copy.png"> Depature</h4>
                                         </div>
+                                      </div>
                                     </div>
+                                    <ng-template #retunTemplate>
+                                      <div class="diagonal2">
+                                        <h4 style="margin: 3px;"><img src="../assets/img/To copy.png"> Return</h4>
+                                      </div>
+                                    </ng-template>
                                     <div class="itenery borderd-bottom">
-
-                                        <div class="row " style="margin:15px;">
-                                            <div class="col-sm-2 col-xs-6 borderd-right" style="padding:15px;">
-                                                <img src="../assets/img/egyptAir.png" class="img-box-result">
-                                            </div>
-                                            <div class="col-sm-3 col-xs-6" style="padding:15px;">
-                                                <!-- <h4 class="dark-gray">{{item.segmentField[0].OriginField.AirportField.cityField}}</h4> -->
-                                            </div>
-                                            <div class="col-sm-2 col-xs-6" style="padding:15px;">
-                                                <h5 class="dark-gray">1:40 pm</h5>
-                                                <h4 class="blue">CAI</h4>
-                                            </div>
-                                            <div class="col-sm-3 hidden-xs " style="padding:15px;">
-                                                <div class="border-bottom  "></div>
-                                            </div>
-                                            <div class="col-sm-2 col-xs-6" style="padding:15px;">
-                                                <h5 class="dark-gray">1:40 pm</h5>
-                                                <h4 class="blue">aa</h4>
-                                            </div>
-
+                
+                
+                                      <div class="row ">
+                                        <div class="col-sm-2 col-xs-6 borderd-right flight-logo">
+                                          <img src="../assets/img/egyptAir.png" class="img-box-result">
                                         </div>
+                                        <div class="col-sm-3 col-xs-6" style="padding: 25px 0 0 15px;">
+                                          <h4 class="dark-gray tight"> {{Route.Segment[0].Origin.Airport.City}}</h4>
+                                        </div>
+                                        <div class="col-sm-2 col-xs-6" style="padding:15px;">
+                                          <h5 class="dark-gray tight">{{Route.Segment[0].Origin.Date | date}}</h5>
+                                          <h5 class="dark-gray tight">{{Route.Segment[0].Origin.Time| date:'h:mm a z'}}</h5>
+                                          <h4 class="blue tight">{{Route.Segment[0].Origin.Airport.Code}}</h4>
+                                        </div>
+                
+                                        <div class="col-sm-2 col-sm-push-3 col-xs-6" style="padding:15px;">
+                                          <h5 class="dark-gray tight">{{Route.Segment[Route.Segment.length-1].Destination.Date | date}}</h5>
+                                          <h5 class="dark-gray tight">{{Route.Segment[Route.Segment.length-1].Destination.Time |
+                                            date:'h:mm a z'}}</h5>
+                                          <h4 class="blue tight">{{Route.Segment[Route.Segment.length-1].Destination.Airport.Code}}</h4>
+                                        </div>
+                                        <div class="col-sm-3 col-sm-pull-2  text-center " style="padding:15px;">
+                                          <h5 class=" tight"><b>Duration: </b>{{Route.Duration}} hr</h5>
+                                          <div class="border-bottom-flight  text-center"></div>
+                
+                                          <h5 *ngIf="Route.Segment.length-1!=0;else NonStop" class=" tight">{{Route.Segment.length-1}}
+                                            Stop</h5>
+                                          <ng-template #NonStop>
+                
+                                            <h5 class=" tight green">Non stop</h5>
+                                          </ng-template>
+                                        </div>
+                
+                                      </div>
+                
                                     </div>
-
+                                  </div>
+                               
                                 </div>
-
-                            <!-- </div> -->
+                
+                                <ng-template #OneWayAndRoundTrip>
+                                  <div class="row padding-0 ">
+                                    <div class="row margin-0  overflow" style="margin-bottom: -5px;">
+                                      <div *ngIf="i=='0';else retunTemplate">
+                                        <div class="diagonal2">
+                                          <h4 style="margin: 3px;"><img src="../assets/img/To copy.png"> Depature</h4>
+                                        </div>
+                                      </div>
+                                    </div>
+                                    <ng-template #retunTemplate>
+                                      <div class="diagonal2">
+                                        <h4 style="margin: 3px;"><img src="../assets/img/To copy.png"> Return</h4>
+                                      </div>
+                                    </ng-template>
+                                    <div class="itenery borderd-bottom">
+                
+                
+                                      <div class="row ">
+                                        <div class="col-sm-2 col-xs-6 borderd-right flight-logo">
+                                          <img src={{Route.Segment[0].Carrier.MarketingImage}} class="img-box-result">
+                                        </div>
+                                        <div class="col-sm-3 col-xs-6" style="padding: 25px 0 0 15px;">
+                                          <h4 class="dark-gray tight"> {{Route.Segment[0].Origin.Airport.City}}</h4>
+                                        </div>
+                                        <div class="col-sm-2 col-xs-6" style="padding:15px;">
+                                          <h5 class="dark-gray tight">{{Route.Segment[0].Origin.Date | date}}</h5>
+                                          <h5 class="dark-gray tight">{{Route.Segment[0].Origin.Time| date:'h:mm a z'}}</h5>
+                                          <h4 class="blue tight">{{Route.Segment[0].Origin.Airport.Code}}</h4>
+                                        </div>
+                
+                                        <div class="col-sm-2 col-sm-push-3 col-xs-6" style="padding:15px;">
+                                          <h5 class="dark-gray tight">{{Route.Segment[Route.Segment.length-1].Destination.Date | date}}</h5>
+                                          <h5 class="dark-gray tight">{{Route.Segment[Route.Segment.length-1].Destination.Time |
+                                            date:'h:mm a z'}}</h5>
+                                          <h4 class="blue tight">{{Route.Segment[Route.Segment.length-1].Destination.Airport.Code}}</h4>
+                                        </div>
+                                        <div class="col-sm-3 col-sm-pull-2  text-center " style="padding:15px;">
+                                          <h5 class=" tight"><b>Duration: </b>{{Route.Duration}} hr</h5>
+                                          <div class="border-bottom-flight  text-center"></div>
+                
+                                          <h5 *ngIf="Route.Segment.length-1!=0;else NonStop" class=" tight">{{Route.Segment.length-1}}
+                                            Stop</h5>
+                                          <ng-template #NonStop>
+                
+                                            <h5 class=" tight green">Non stop</h5>
+                                          </ng-template>
+                                        </div>
+                
+                                      </div>
+                
+                                    </div>
+                                  </div>
+                                </ng-template>
+                
+                              </div>
 
                         </div>
                         <div class="row borderd-top" style="padding:15px 0;">
@@ -70,62 +145,68 @@
                                 </a>
                             </div>
                         </div>
-
                         <div id="collapseBasic" [collapse]="!isCollapsed" class="card card-block card-header">
-                            <div class="row margin-0 borderd-top">
-                                <div class="col-md-12 clearfix">
-                                    <h4 class="fl"><b class="blue">Depart</b> <span class="dark-gray"> CAI - DXB</span></h4>
-                                    <h4 class="fr">
-                                        4h 55m
-                                    </h4>
-                                </div>
-                                <div class="col-md-12 ">
-                                    <div class="borderd-details">
-                                        <div class="media">
-                                            <div class="media-left" style="width: 30%;">
-                                                <p>Sun, Nov 11 <span class="blue"> <b>Egyptair</b></span> </p>
-                                            </div>
-                                            <div class="media-body">
-                                                <p class="media-heading">1:40 pm<span> — </span>5:30 pm</p>
-                                                <p class="media-heading">Cairo<span> — </span>Manama</p>
-                                                <p>Gulf Air 70 · Narrow-Body Jet · Airbus A321-100/200</p>
-                                            </div>
-                                            <div class="media-right" style="width: 20%;">
-                                                <p>Economy <span> 2h 50m</span> </p>
-                                                <h3 class="orange">$370.21</h3>
-                                            </div>
+                            <div *ngFor="let Route of this.flightservice.selectedItenartyData[0].Routes; let i = index">
+                                <div class="row margin-0 borderd-top">
+                                    <div class="col-md-12 ">
+                                      <div *ngIf="i=='0';else retunDetailsTemplate">
+                                        <div _ngcontent-c5="" class="fl radio-home">
+                                          <label _ngcontent-c5="" class="radio-inline check">
+                                            <input _ngcontent-c5="" checked="" id="inlineRadio1" name="inlineRadioOptions" type="radio"
+                                              value="option1">
+                                            <b class="blue">Depart</b>
+                                            <span class="dark-gray"> {{Route.Segment[0].Origin.Airport.City}} -
+                                              {{Route.Segment[Route.Segment.length-1].Destination.Airport.City}}</span> <span _ngcontent-c5=""
+                                              class="radio2"></span></label>
                                         </div>
-                                    </div>
-                                </div>
-
-                            </div>
-                            <div class="row margin-0 ">
-                                <div class="col-md-12 clearfix">
-                                    <h4 class="fl"><b class="blue">Depart</b> <span class="dark-gray"> CAI - DXB</span></h4>
-                                    <h4 class="fr">
-                                        4h 55m
-                                    </h4>
-                                </div>
-                                <div class="col-md-12 ">
-                                    <div class="borderd-details">
-                                        <div class="media">
-                                            <div class="media-left" style="width: 30%;">
-                                                <p>Sun, Nov 11 <span class="blue"> <b>Egyptair</b></span> </p>
-                                            </div>
-                                            <div class="media-body">
-                                                <p class="media-heading">1:40 pm<span> — </span>5:30 pm</p>
-                                                <p class="media-heading">Cairo<span> — </span>Manama</p>
-                                                <p>Gulf Air 70 · Narrow-Body Jet · Airbus A321-100/200</p>
-                                            </div>
-                                            <div class="media-right" style="width: 20%;">
-                                                <p>Economy <span> 2h 50m</span> </p>
-                                                <h3 class="orange">$370.21</h3>
-                                            </div>
+                                      </div>
+                                      <ng-template #retunDetailsTemplate>
+                                        <div _ngcontent-c5="" class="fl radio-home">
+                                          <label _ngcontent-c5="" class="radio-inline check">
+                                            <input _ngcontent-c5="" checked="" id="inlineRadio1" name="inlineRadioOptions" type="radio"
+                                              value="option1">
+                                            <b class="blue">Return</b>
+                                            <span class="dark-gray"> {{Route.Segment[0].Origin.Airport.City}} -
+                                              {{Route.Segment[Route.Segment.length-1].Destination.Airport.City}}</span> <span _ngcontent-c5=""
+                                              class="radio2"></span></label>
                                         </div>
+                                      </ng-template>
+                                      <h4 class="fr">
+                                        <b>Total Duration:</b> {{Route.Duration}} hr
+                                      </h4>
                                     </div>
-                                </div>
+                                    <div *ngFor="let Seg of Route.Segment; let i = index">
+                                      <div class="col-md-12 ">
+                                        <div class="borderd-details row">
+                    
+                                          <div class="col-md-3">
+                                            <p>{{Seg.Origin.Date | date}} <span class="blue"> <b *ngIf="Seg.Carrier.Operating!=null;else retunmarktingTemplate">{{Seg.Carrier.Operating.Value}}</b></span>
+                                            </p>
+                                            <ng-template #retunmarktingTemplate>
+                                              <b>{{Seg.Carrier.Marketing.Value}}</b>
+                                            </ng-template>
+                                          </div>
+                    
+                                          <div class="col-md-6">
+                                            <p class="media-heading"><b> Takeoff: </b>{{Seg.Origin.Time| date:'h:mm a z'}}<span> — </span><b>
+                                                Arrival:</b> {{Seg.Destination.Time| date:'h:mm a z'}}</p>
+                                            <p class="media-heading"><b>From: </b>{{Seg.Origin.Airport.City}}<span> — </span><b>To: </b>{{Seg.Destination.Airport.City}}</p>
+                                            <p><span><b>Flight number: </b>{{Seg.Flight.Number}}</span> <br> <b>{{Seg.Aircraft.Value}}</b><br>
+                                              <span><b>Aircraft code: </b> {{Seg.Aircraft.Code}}</span></p>
+                                          </div>
+                                          <div class="col-md-3">
+                                            <p> <span><b> Duration: </b> {{Seg.Flight.Duration}} hr</span> <br /> <span><b> Cabin type:</b>
+                                                {{Seg.Flight.CabinType}} </span><br /> <span><b>Class:{{Seg.Flight.Class}} </b></span> </p>
+                                          </div>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
                             </div>
-                        </div>
+                          
+                      </div>
+                       
+                      
                         
                     </div>
                 </div>
