--- a/src/app/_components/flights-components/flight-one-way/flight-one-way.component.html
+++ b/src/app/_components/flights-components/flight-one-way/flight-one-way.component.html
@@ -18,7 +18,7 @@
 
     <div class="form-group  col-md-3 padding-rl5">
         <input class="form-control"  placeholder="{{ 'FlightOneWay.AdultEconomy' | translate }}"
-          placement="bottom" [popover]="popTemplate">
+          placement="bottom" [popover]="popTemplate" [outsideClick]="true">
         <ng-template #popTemplate>
           <div class="form-group">
             <label>{{ 'FlightOneWay.Adult' | translate }}</label>
@@ -26,7 +26,7 @@
           </div>
           <div class="form-group">
             <label> {{ 'FlightOneWay.Children' | translate }}</label>
-            <input type="number" class="form-control plus" name="Child" [(ngModel)]="flightService.oneWayModel.Child" #Child placeholder="0">
+            <input type="number" class="form-control plus" name="Child" [(ngModel)]="flightService.oneWayModel.Children" #Child placeholder="0">
           </div>
         </ng-template>        
       </div>
