--- a/src/app/_components/flights-components/flight-round-trip/flight-round-trip.component.html
+++ b/src/app/_components/flights-components/flight-round-trip/flight-round-trip.component.html
@@ -27,7 +27,7 @@
         </div>
         <div class="form-group">
           <label> {{ 'FlightRoundTrip.Children' | translate }}</label>
-          <input type="number" class="form-control plus" name="Child" [(ngModel)]="flightService.roundTripModel.Child" #Child placeholder="0">
+          <input type="number" class="form-control plus" name="Child" [(ngModel)]="flightService.roundTripModel.Children" #Child placeholder="0">
         </div>
       </ng-template>
 
