--- a/src/app/_components/flights-components/flight-trip-summary/flight-trip-summary.component.html
+++ b/src/app/_components/flights-components/flight-trip-summary/flight-trip-summary.component.html
@@ -6,55 +6,73 @@
             </h2>
             <div class="border-bottom row"></div>
             <div class="row">
-                <h5 class="fl blue"><b>Roundtrip Flight</b></h5>
-                <p class="fr dark-gray" style="margin-top: 8px;">1 ticket:<span> 1 adult</span></p>
+                <h5 class="fl blue"><b>{{ this.flightservice.flightType}}</b></h5>
+                <p class="fr dark-gray" style="margin-top: 8px;"> ticket:{{this.numberOfTickets}} </p>
             </div>
             <div class="row">
-                <h5 class="fl blue"><b>Dubai (DXB) to London (LCY)</b></h5>
-                <p class="fr dark-gray" style="margin-top: 8px;">Airline:<span> KLM</span></p>
+                <h5 class="fl blue"><b>{{this.flightservice.flightDetails.fareDetailsField.paxFareField[0].baggageAllowanceField[0].segmentField.originField.airportField.cityField}} ({{this.flightservice.flightDetails.fareDetailsField.paxFareField[0].baggageAllowanceField[0].segmentField.originField.airportField.codeField}}) to {{this.flightservice.flightDetails.fareDetailsField.paxFareField[0].baggageAllowanceField[0].segmentField.destinationField.airportField.cityField}} ({{this.flightservice.flightDetails.fareDetailsField.paxFareField[0].baggageAllowanceField[0].segmentField.destinationField.airportField.codeField}})</b></h5>
+                <p class="fr dark-gray" style="margin-top: 8px;">Airline:<span> {{this.flightservice.flightDetails.fareDetailsField.validatingCarrierField.valueField}}</span></p>
             </div>
-            <div class="row">
-                <h5 class="fl dark-gray"><b>Fri, Nov 16 - Fri, Nov 23</b></h5>
-                <p class="fr dark-gray" style="margin-top: 8px;">Class: <span> Economy</span></p>
+            <div *ngIf="this.flightservice.flightType!='oneWay';else  RoundTripAndMulti">
+                    <div class="row">
+                            <h5 class="fl dark-gray"><b>{{this.flightservice.flightDetails.fareDetailsField.paxFareField[0].baggageAllowanceField[0].segmentField.originField.dateField | date}}   </b></h5>
+                            <p class="fr dark-gray" style="margin-top: 8px;">Class: <span> Economy</span></p>
+                        </div>
+
             </div>
+            <ng-template #RoundTripAndMulti>
+                    <div class="row">
+                            <h5 class="fl dark-gray"><b>{{this.flightservice.flightDetails.fareDetailsField.paxFareField[0].baggageAllowanceField[0].segmentField.originField.dateField | date}} -{{this.flightservice.flightDetails.fareDetailsField.paxFareField[0].baggageAllowanceField[1].segmentField.originField.dateField | date}}   </b></h5>
+                            <p class="fr dark-gray" style="margin-top: 8px;">Class: <span> Economy</span></p>
+                        </div>
+                  </ng-template>
+
+           
             <div class="row">
-                <h5 class="fl dark-gray"><b>Baggage allowance:</b> 30 Kg(s)</h5>
+                <h5 class="fl dark-gray"><b>Baggage allowance:</b> {{this.flightservice.flightDetails.fareDetailsField.paxFareField[0].baggageAllowanceField[0].baggageField.allowedField}} Kg(s)</h5>
             </div>
             <div class="border-bottom row"></div>
 
             <div class="row">
-                <h5 class="fl blue"><b>Traveler 1: Adult </b></h5>
+                <h5 class="fl blue"><b>Traveler  ( Adult: {{this.flightservice.numberOfAdult}}  - Childs: {{this.flightservice.numberOfChilds}})</b></h5>
             </div>
             <div class="row">
                 <h5 class="fl dark-gray"><b>Flight</b></h5>
-                <p class="fr dark-gray" style="margin-top: 8px;">$276.00</p>
+                <p class="fr dark-gray" style="margin-top: 8px;">{{this.flightservice.flightDetails.priceField.amountField}} {{this.flightservice.flightDetails.priceField.currencyField}}</p>
             </div>
             <div class="row">
                 <h5 class="fl dark-gray"><b>Taxes &amp; Fees</b></h5>
-                <p class="fr dark-gray" style="margin-top: 8px;">$272.43</p>
+                <p class="fr dark-gray" style="margin-top: 8px;">0</p>
             </div>
             <div class="row">
                 <h5 class="fl dark-gray"><b>Booking Fee</b></h5>
-                <p class="fr dark-gray" style="margin-top: 8px;">$2.78</p>
+                <p class="fr dark-gray" style="margin-top: 8px;">0</p>
             </div>
             <div class="border-bottom row"></div>
             <div class="row">
                 <h3 class="fl dark-gray"><b>Total trip</b></h3>
-                <h3 class="fr dark-gray">$551.19</h3>
+                <h3 class="fr dark-gray">{{this.flightservice.flightDetails.priceField.amountField}} {{this.flightservice.flightDetails.priceField.currencyField}}</h3>
             </div>
             <div class="row">
-                <h5 class="dark-gray"><b>Rates ar.e quoted in US dollars</b></h5>
+                <h5 class="dark-gray"><b>Rates ar.e quoted in {{this.flightservice.flightDetails.priceField.currencyField}}</b></h5>
                 <h5 class="orange"> THIS BOOKING WILL GIVE YOU 130 POINTS</h5>
 
             </div>
 
             <div class="border-bottom row"></div>
-            <p class="dark-gray">
-                Your flight is a combination of two one-way fares, each subject to its own rules and restrictions. If
-                one of your flights is changed or cancelled, it will not automatically alter the other flight. Changes
-                to the other flight may incur a charge.
-            </p>
+            <div *ngIf="nonRefundableFieldSpecified==False;else NOnRefundableTemplate">
 
+           
+            <p class="dark-gray">
+                Refundable
+            </p>
+        </div>
+
+        <ng-template #NOnRefundableTemplate>
+            <p class="dark-gray">
+               NOn Refundable
+            </p>
+          </ng-template>
             <div class="row text-center">
                 <button class="btn btn-orange" (click)="continueBooking()">Continue Booking</button>
             </div>
